# camproto-nvr

./: Cargo.toml  Readme.md
.cargo/: config.toml
src/: lib.rs
src/decode/: macos.rs  mod.rs  windows_d3d11.rs  windows_ffmpeg.rs  windows_mf.rs
src/ui/: app.rs  mod.rs  tile.rs  topbar.rs
